Upgrade code to work with JDK-17, JEP-412, Panama build 17-panama+3-167